# eris-engine

./: CMakeLists.txt  build.bat
assets/shaders/: debug.glsl  depth.glsl  scene.frag  scene.vert  screen.glsl  skybox.glsl
include/engine/: mesh.hpp  model.hpp  scene.hpp  shader.hpp  skybox.hpp  utils.h
include/engine/buffers/: bo.hpp  ebo.hpp  fbo.hpp  quad.hpp  sbo.hpp  vao.hpp  vbo.hpp
include/engine/components/: camera.hpp  light.hpp  material.hpp  meshfilter.hpp  meshrenderer.hpp  rotator.hpp
include/engine/ecs/: component.hpp  entity.hpp  system.hpp
include/engine/systems/: render.hpp  update.hpp
include/engine/utils/: color.h  matrix.h  quat.h
include/platform/: platform.hpp
src/: main.cpp
src/core/: color.cpp  matrix.cpp  scene.cpp  shader.cpp
src/core/buffers/: fbo.cpp  quad.cpp  sbo.cpp
src/engine/: platform.cpp
